--- a/package.json
+++ b/package.json
@@ -7,19 +7,31 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "scrape": "ts-node src/scraper.ts"
+    "scrape": "ts-node src/scraper.ts",
+    "dev:viewer": "next dev",
+    "build:viewer": "next build",
+    "start:viewer": "next start"
   },
   "keywords": ["scraping", "kariyer.net", "job-listings"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "playwright": "^1.40.0",
-    "csv-writer": "^1.6.0"
+    "csv-writer": "^1.6.0",
+    "next": "^14.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "csv-parse": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "typescript": "^5.3.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
   }
 }
 
